[gd_scene load_steps=26 format=2]

[ext_resource path="res://Scenes/Enemy/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Enemies/WormBall/WormBall.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Enemies/WormBall/WormBall_walk.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Enemies/WormBall/WormBall_roll.png" type="Texture" id=4]
[ext_resource path="res://shaders/flash_on_hit.tres" type="Shader" id=5]
[ext_resource path="res://Sprites/Enemies/WormBall/trailback.png" type="Texture" id=6]

[sub_resource type="CapsuleShape2D" id=17]
radius = 27.0
height = 0.01

[sub_resource type="ShaderMaterial" id=16]
resource_local_to_scene = true
shader = ExtResource( 5 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 256, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 320, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 320, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 384, 0, 64, 32 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "roll",
"speed": 30.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "walk",
"speed": 7.0
} ]

[sub_resource type="Gradient" id=21]
colors = PoolColorArray( 1, 1, 1, 0.8, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=20]
gradient = SubResource( 21 )

[sub_resource type="ParticlesMaterial" id=18]
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0
color_ramp = SubResource( 20 )

[node name="WormBall" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="CollisionShape2D" parent="." index="0"]
position = Vector2( 0, 2 )
rotation = 1.5708
shape = SubResource( 17 )

[node name="Sprite" parent="." index="1"]
material = SubResource( 16 )
scale = Vector2( 2, 2 )
frames = SubResource( 8 )
animation = "roll"
frame = 1
playing = true
flip_h = true

[node name="AttackTimer" parent="." index="2"]
one_shot = true

[node name="AttackCooldown" type="Timer" parent="." index="3"]
wait_time = 4.0
autostart = true

[node name="Trail" type="Particles2D" parent="." index="5"]
modulate = Color( 0.647059, 0.647059, 0.647059, 1 )
position = Vector2( 0, 1 )
scale = Vector2( 1.98897, 2.04449 )
z_index = -5
amount = 10
lifetime = 0.35
local_coords = false
process_material = SubResource( 18 )
texture = ExtResource( 6 )

[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_AttackCooldown_timeout"]
